# buildbot-gitee-plugin

./: .gitignore  README.md  poetry.toml  pyproject.toml
buildbot_gitee/secrets/providers/: giteetoken.py
buildbot_gitee/test/unit/: test_secret_in_gitee.py
buildbot_gitee/util/: giteeclientservice.py
